tests/baselines/reference/classIndexer3.errors.txt
==== tests/cases/compiler/classIndexer3.ts (1 errors) ====
    class C123 {
        [s: string]: number;
        constructor() {
        }
    }
    
    class D123 extends C123 {
        x: number;
        y: string;
        ~~~~~~~~~~
!!! error TS2171: All named properties must be assignable to string indexer type 'number'.
    }